# scribe

./: Cargo.toml  test.dj
notes/: test.dj
scribe-common/: Cargo.toml
scribe-common/src/: lib.rs
scribe-common/src/cli/: render.rs
scribe-common/src/djot/: frontmatter.rs  inkjet.rs  katex.rs  mod.rs
scribe-common/src/tools/: latex.rs
scribe-notes/: Cargo.toml
scribe-notes/src/: config.rs  header.rs  main.rs  render.rs  templates.rs
src/: doc.rs  main.rs
src/cli/: mod.rs  note.rs  render.rs
src/djot/: error.rs  headings.rs  inkjet.rs  mod.rs
src/passes/: error.rs  inkjet.rs  katex.rs  mod.rs
templates/: layout.html  note.html
