[package]
name = "scribe-notes"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
scribe-common = { version = "0.1.0", path = "../scribe-common" }
serde = { version = "1.0.219", features = ["derive"] }
tera = "1.20.0"
thiserror = "2.0.12"
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
